--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
 <body>
 
 <div ui-view></div>
-	
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
 <script src="/src/app.js"></script>
+<script src="/src/gameService.js"></script>
+<script src="/src/home/homeCtrl.js"></script>
 </body>
 </html>
