--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -1,2 +1,6 @@
 <h1>Hello from Home</h1>
 <a ui-sref="profile">Go to profile</a>
+
+<ul>
+  <li ng-repeat="game in games"> {{game.title}} </li>
+</ul>
